[build-system]
requires = [
    "setuptools >= 65",
    "wheel >= 0.38",
]
build-backend = "setuptools.build_meta"

[project]
name = "pylint-mongoengine"
version = "0.5.0"
authors = [
  { name="Juca Crispim" },
]
description = "A Pylint plugin to help it understand MongoEngine"
readme = "README.md"

dependencies = [
    'pylint>=3.2.0',
    'pylint-plugin-utils>=0.8.2'
]

classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Console',
    'Intended Audience :: Developers',
    'Operating System :: Unix',
    'Topic :: Software Development :: Quality Assurance',
    'Programming Language :: Python :: 3'
]


[tool.setuptools.packages.find]
exclude = ["tests*"]